2007-01-30  Peter Williams  <peter@newton.cx>

	* omega/layout.py (Grid,Overlay): Break out these classes into a
	separate file...

	* omega/base.py (Grid,Overlay): ... from here.

	* omega/__init__.py: Modify to still import the above.

2007-01-30  Peter Williams  <peter@newton.cx>

	* omega/base.py: Have Axis objects have a coordSpec field that
	tells what kind of data item their coordinate is, so that 
	datapainters can synthesize their sinkSpec arguments correctly.
	(BandPainter): New kind of field painter, paints a (x, ylow, yhigh)
	band.
	
	* omega/styles.py (BitmapStyle.apply_genericBand): New placeholdery
	style for BandPainter.


	* demo/discrete.py: Also exercise BandPainter with some fake
	errors to go with my fake temperatures.

	* omega/sources.py: What do you know, we CAN count on
	generators. Nice!
	(Function.__init__): Allow the return type of the function to be
	specified.
	(ParametricFunction.__init__): Same
	
2007-01-30  Peter Williams  <peter@newton.cx>

	* omega/base.py (LinearAxis.transform): Add a vital float cast
	in case some fool (me) sets self.min and max to integers.
	(DiscreteAxis): New class, axis implementation for a finite set
	of discrete values.
	(DiscreteAxisPainter): New class to paint the above.
	(RectDataPainter.doChunkPaint): Don't draw lines if self.lines
	is false.

	* demo/discrete.py: New demo testing DiscreteAxis and
	DiscreteAxisPainter and point-only RectDataPainting.

	* demo/Makefile.am (EXTRA_DIST): Add discrete.py, sinc.py and
	lissajou.py

	* omega/sources.py (StoredData): New source class, just returns
	data that is passed in in the __init__ function.
	(OneItemIterator): New class, just yields one item and that's it.
	If we could count on generators, this would be totally useless.
	(OneFuncIterator): As above, but returns the result of a function
	call (that is delayed until the iterator is iterated over.)
	(Function.__iter__): Use OneFuncIterator, fix comment.
	(ParametricFunction.__iter__): Same.
	